@@ -634,6 +634,9 @@ mets.submission.crosswalk.DC = QDC
 # Option to save METS manifest in the item: (default is false)
 mets.submission.preserveManifest = false
 
+# Option to make use of collection templates when using the METS ingester (default is false)
+mets.submission.useCollectionTemplate = false
+
 # Crosswalk Plugins:
 plugin.named.org.dspace.content.crosswalk.IngestionCrosswalk = \
   org.dspace.content.crosswalk.PREMISCrosswalk = PREMIS \
